[tool.poetry]
name = "nut-monitor-prometheus"
version = "1.0"
description = "Nut Monitor Prometheus Exporter"
authors = ["Vladyslav Pikus <pvladislavs@gmail.com>"]
readme = "README.md"
packages = [
    { include = "nut_monitor_prometheus"}
]

[tool.poetry.dependencies]
python = "^3.12"
prometheus-client = "^0.20.0"
PyYAML = "^6.0.1"
nut-monitor-client = {path = "../nut-monitor-client", develop = false}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
